--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,10 @@ span, p, div {
   transition: opacity 200ms ease;
 }
 
+.project-icon::before {
+  background-color: #323640 !important;
+}
+
 .skill-icon:hover::before, .skill-image:hover::before {
   transform: scaleX(1) translate(-50%);
   opacity: 1;
